--- a/app/views/news/categories.html.slim
+++ b/app/views/news/categories.html.slim
@@ -3,59 +3,59 @@
 		h1.thin.mb-3 Categorias
 		.row.animated.slideInLeft
 			.col-3
-				.square#business
+				.square.pointer#business
 					h3 Business
 			.col-3
-				.square#economy
+				.square.pointer#economy
 					h3 Economia
 			.col-3
-				.square#bovespa
+				.square.pointer#bovespa
 					h3 Bovespa
 			.col-3
-				.square#travel
+				.square.pointer#travel
 					h3 Viagem
 		.row.animated.slideInRight
 			.col-3
-				.square#health
+				.square.pointer#health
 					h3 Saúde
 			.col-3
-				.square#sports
+				.square.pointer#sports
 					h3 Esportes
 			.col-3
-				.square#apple
+				.square.pointer#apple
 					h3 Apple
 			.col-3
-				.square#google
+				.square.pointer#google
 					h3 Google
 		.row.animated.slideInLeft	
 			.col-3
-				.square#amazon
+				.square.pointer#amazon
 					h3 Amazon
 			.col-3
-				.square#microsoft
+				.square.pointer#microsoft
 					h3 Microsoft
 			.col-3
-				.square#science
+				.square.pointer#science
 					h3 Ciência
 			.col-3
-				.square#entertainment
+				.square.pointer#entertainment
 					h3 Entretenimento
 		.row.animated.slideInRight
 			.col-3
-				.square#auto
+				.square.pointer#auto
 					h3 Veículos
 			.col-3
-				.square#decoration
+				.square.pointer#decoration
 					h3 Decoração
 			.col-3
-				.square#technology
+				.square.pointer#technology
 					h3 Tecnologia
 			.col-3
-				.square#tesla
+				.square.pointer#tesla
 					h3 Tesla
 		.row.animated.slideInLeft
 			.col-3
-				.square#cripto
+				.square.pointer#cripto
 					h3 Cripto Moedas
 
 .mobile-categories
