--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -30,7 +30,7 @@
 .news.mt-3.mb-1
 	.horizontal-bar
 		h2.thin.mb-2.animated.fadeInLeftBig Economia
-		h2.add-following
+		/h2.add-following
 			img.animated.bounceIn src="https://img.icons8.com/ios-glyphs/35/000000/add.png"
 	.mobile-gallery.gallery.js-flickity.pb-3 data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
@@ -56,7 +56,7 @@
 .news.mt-3.mb-1
 	.horizontal-bar
 		h2.thin.mb-2.animated.fadeInLeftBig Corona Vírus
-		h2.add-following
+		/ h2.add-following
 			img.animated.bounceIn src="https://img.icons8.com/ios-glyphs/35/000000/add.png"
 	.mobile-gallery.gallery.js-flickity.pb-3 data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
@@ -82,7 +82,7 @@
 .news.mt-3.mb-1
 	.horizontal-bar
 		h2.thin.mb-2.animated.fadeInLeftBig Política
-		h2.add-following
+		/h2.add-following
 			img.animated.bounceIn src="https://img.icons8.com/ios-glyphs/35/000000/add.png"
 	.mobile-gallery.gallery.js-flickity.pb-3 data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
