--- a/app/views/mobile/_bottom-nav.html.slim
+++ b/app/views/mobile/_bottom-nav.html.slim
@@ -6,9 +6,9 @@
   	p= link_to categories_path
     	img src="https://img.icons8.com/ios-glyphs/40/999999/albums.png"
   	- if current_user  	
-  		- if current_user.photo.attached?
+  		- if current_user.photo
   			p= link_to profile_path
-  				= image_tag(current_user.photo, width: 40, height: 40, style: "border-radius: 50%")
+  				= image_tag(current_user.photo if current_user.photo.attached? , width: 40, height: 40, style: "border-radius: 50%")
   		- else
   			p= link_to profile_path
 		    	img src="https://img.icons8.com/ios-filled/40/999999/user-male-circle.png"
