--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,9 +2,9 @@
 	.horizontal-bar.mt-5.mb-1
 	  	h1.ulta-thin Feres News
 	  	- if current_user
-	  		- if current_user.photo
+	  		- if current_user.photo.attached?
 	  			p= link_to profile_path
-	  				= image_tag(current_user.photo if current_user.photo.attached?, width: 50, height: 50, style: "border-radius: 50%")	
+	  				= image_tag(current_user.photo, width: 50, height: 50, style: "border-radius: 50%")	
 	  		- else
 	  			p= link_to profile_path
 			    	img src="https://img.icons8.com/ios-filled/50/999999/user-male-circle.png"
