--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -105,6 +105,12 @@ h1,h2,h3,h4,h5,h6,p{
 .button:hover{
 	box-shadow: 1px 5px 15px 3px transparent;
 }
+.button-white{
+	background: var(--secondary) !important;
+	color: #000;
+	box-shadow: 1px 5px 15px 3px transparent;
+	font-size: 1.1em;
+}
 /*Categories*/
 .desktop-categories .square{
 	width: 100%;
@@ -200,4 +206,14 @@ h1,h2,h3,h4,h5,h6,p{
 	background: #33cc33;
 	background: -webkit-linear-gradient(150deg, #33cc33, #248f24);
 	background: linear-gradient(150deg, #33cc33, #248f24);
+}
+.downloadPwa .section{
+	background: -webkit-linear-gradient(to bottom, #222, #000);
+	background: linear-gradient(to bottom, #222, #000);
+	height: 300px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	padding: 7% 0;
 }
