--- a/app/views/news/category.html.slim
+++ b/app/views/news/category.html.slim
@@ -1,4 +1,4 @@
-.p-3
+.p-3.category
 	.d-flex.justify-content-between
 		h1.thin.mb-3.animated.fadeInLeftBig#title= @categoryName
 		- if current_user
