--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -1,9 +1,3 @@
-/* Generic Styles .  .  .  .  .  .  .  .  .  .  . */
-body{
-	background-color: var(--light-mode-background);
-	font-family: sans-serif;
-	padding-top: 2%;
-}
 h1,h2,h3,h4,h5,h6,p{
 	color: #333;
 	font-family: 'Noto Serif', serif;
@@ -13,14 +7,9 @@ h1,h2,h3,h4,h5,h6,p{
 	-webkit-box-shadow: inset 0 0 10px rgba(0,0,0,.1);
 	box-shadow:         inset 0 0 10px rgba(0,0,0,.1);	
 }
-.pointer{
-	cursor: pointer;
-}
-.thin{ font-weight: 200 }
-.ulta-thin{ font-weight: 50 !important }
 /* Home Styles  .  .  .  .  .  .  .  .  .  .  .  .*/
 .home-desktop .sidebar{
-	background: rgba(230,230,230,0.7);
+	background: var(--light-sidebar-background);
    	-moz-box-shadow: inset 0 0 10px rgba(0,0,0,.1);
    	-webkit-box-shadow: inset 0 0 10px rgba(0,0,0,.1);
    	box-shadow: inset 0 0 10px rgba(0,0,0,.1);
@@ -39,6 +28,19 @@ h1,h2,h3,h4,h5,h6,p{
 .sidebar .horizontal-bar{
 	padding: 4% 4% 4% 4% !important;
 }
+.sidebar-icon-categories{
+	content:url(https://img.icons8.com/ios-glyphs/30/777777/albums.png);
+}
+.sidebar-icon-home{
+	content:url(https://img.icons8.com/ios-glyphs/30/777777/today-apps.png);
+}
+.user-profile{
+	content:url(https://img.icons8.com/ios-filled/50/999999/user-male-circle.png);
+}
+.sidebar a{
+	color: #777;
+	text-decoration: none
+}
 .horizontal-bar{
 	display: flex;
 	justify-content: space-between;
@@ -51,8 +53,26 @@ h1,h2,h3,h4,h5,h6,p{
 	z-index: 99;
 	height: 100%;
 	width: 82%;	
+	background-color: var(--light-body);
 }
 /* Articles Styles .  .  .  .  .  .  .  .  .  .  .*/
+.gallery {
+	background: -webkit-linear-gradient(to bottom, #fff, #f2f2f2);
+	background: linear-gradient(to bottom, #fff, #f2f2f2);
+}
+.mobile-gallery .gallery-cell {
+  	width: 77%;
+  	margin: 0 5%;
+  	counter-increment: gallery-cell;
+}
+.web-gallery .gallery-cell {
+  	width: 20%;
+  	margin: 0 1%;
+  	counter-increment: gallery-cell;
+}	
+.home-date{
+	color: rgba(0,0,0,0.3)
+}
 .articles{
 	display: flex;
 	justify-content: space-between;
@@ -65,7 +85,6 @@ h1,h2,h3,h4,h5,h6,p{
 	overflow: hidden;
 	background: white;
 	border-radius: 8px;
-	/*box-shadow: 0 0 40px 3px rgba(0,0,0,0.2);*/
 	padding: 2% 2% 7% 2%;
 	display: flex;
 	flex-direction: column;
@@ -104,12 +123,6 @@ h1,h2,h3,h4,h5,h6,p{
 }
 .button:hover{
 	box-shadow: 1px 5px 15px 3px transparent;
-}
-.button-white{
-	background: var(--secondary) !important;
-	color: #000;
-	box-shadow: 1px 5px 15px 3px transparent;
-	font-size: 1.1em;
 }
 /*Categories*/
 .desktop-categories .square{
