--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-  body
+  body.darkBody
     = render 'layouts/desktop-sidebar'
     .main
         = yield
@@ -22,19 +22,15 @@ css:
 
 javascript:
   $(document).ready(function(){
-    // app = new App()
-    // if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-    //   app.switchToDarkMode()
-    // }
-    // window.matchMedia('(prefers-color-scheme: dark)').addListener(function (e) {
-    //   if(e.matches){        
-    //     app.switchToDarkMode()
-    //   }else{
-    //     app.switchToLightMode()
-    //   }
-    // });
-    // $('body').dblclick(function(e){
-    //   $(location).attr('href',"#{root_path}");
-    //   e.preventDefault()
-    // })
+    app = new App()
+    if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      app.switchToDarkMode()
+    }
+    window.matchMedia('(prefers-color-scheme: dark)').addListener(function (e) {
+      if(e.matches){        
+        app.switchToDarkMode()
+      }else{
+        app.switchToLightMode()
+      }
+    });
   })
