--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -30,6 +30,9 @@ css:
     top: 0;
     left: 0;
   }
+  .darkBody .Auth{
+    background: #000;
+  }
   .Auth .box{
     background: #fff;
     box-shadow: 1px 1px 25px 3px rgba(0,0,0,.1);
@@ -40,15 +43,30 @@ css:
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: white;
   }
-  .Auth .box input[type="email"], .Auth .box input[type="password"], .Auth .box input[type="text"]{
+  .darkBody .Auth .box{
+    background: #111;
+    box-shadow: 1px 1px 25px 3px transparent;
+  }
+  .darkBody .Auth .box h2{
+    color: white;
+  }  
+  .Auth .box input[type="email"], 
+  .Auth .box input[type="password"], 
+  .Auth .box input[type="text"]{
     border: 1px solid #ccc;
     width: 90%;
     height: 40px;
     margin: 3% 0;
     padding: 2% 4%; 
     border-radius: 20px;
+  }
+  .darkBody .Auth .box input[type="email"], 
+  .darkBody .Auth .box input[type="password"], 
+  .darkBody .Auth .box input[type="text"]{
+    border: 1px solid #222;
+    background: #000;
+    color: white;
   }
   .Auth .box input[type="submit"]{
     border: none;
@@ -60,8 +78,15 @@ css:
     background: var(--primary);
     color: var(--secondary)
   }
+  .darkBody .Auth .box input[type="submit"]{
+    background: var(--secondary);
+    color: var(--primary)
+  }  
   .Auth .box a{
     color: var(--primary);
+  }
+  .darkBody .Auth .box a{
+    color: var(--secondary);
   }
   @media only screen and (max-width: 600px) {
     .Auth .box{
