--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -3,7 +3,7 @@
 	.horizontal-bar
 		h2.thin.animated.fadeInLeftBig Hoje
 		/p.text-primary.thin.animated.fadeInRightBig
-		h2= link_to today_path do
+		/h2= link_to today_path do
 			img.animated.bounceIn src="https://img.icons8.com/ios-glyphs/35/000000/connection-status-off.png"
 	.mobile-gallery.gallery.js-flickity.pb-3 data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
