--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,9 @@ html
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = component 'pwa/manifest', url: request.base_url
     meta name="viewport" content="width=device-width, initial-scale=1.0"
+    = favicon_link_tag "app-icon.png", rel: "apple-touch-icon", sizes: "100x100", type: "image/png"
   body
     = render 'layouts/desktop-sidebar'
     .main
