--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     / Icons
-    link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"
+    = favicon_link_tag "favicon.ico", rel: "shortcut icon", type: "image/x-icon"
     = favicon_link_tag "apple-touch-icon-57x57.png", rel: "apple-touch-icon", sizes: "57x57", type: "image/png"
     = favicon_link_tag "apple-touch-icon-72x72.png", rel: "apple-touch-icon", sizes: "72x72", type: "image/png"
     = favicon_link_tag "apple-touch-icon-76x76.png", rel: "apple-touch-icon", sizes: "76x76", type: "image/png"
@@ -21,7 +21,18 @@ html
     = favicon_link_tag "apple-touch-icon-144x144.png", rel: "apple-touch-icon", sizes: "144x144", type: "image/png"
     = favicon_link_tag "apple-touch-icon-152x152.png", rel: "apple-touch-icon", sizes: "152x152", type: "image/png"
     = favicon_link_tag "apple-touch-icon-180x180.png", rel: "apple-touch-icon", sizes: "180x180", type: "image/png"
-    / 
+    / Launch Screen
+    = favicon_link_tag "iphone5_splash.png", media: "(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "iphone6_splash.png", media: "(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "iphoneplus_splash.png", media: "(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "iphonex_splash.png", media: "(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "iphonexr_splash.png", media: "(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "iphonexsmax_splash.png", media: "(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "ipad_splash.png", media: "(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "ipadpro1_splash.png", media: "(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "ipadpro3_splash.png", media: "(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)", rel: "apple-touch-startup-image"
+    = favicon_link_tag "ipadpro2_splash.png", media: "(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)", rel: "apple-touch-startup-image"  
+    /
     link rel="manifest" href="/manifest.json"
   body
     = render 'layouts/desktop-sidebar'
