--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -16,8 +16,8 @@
 					a href="#{headlines[i]['url']}" target="blank"
 						button.button= translate 'home.read'
 
-	.web-gallery.gallery.js-flickity.pb-3.animated.slideInLeft data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
-		- 10.times do |i|
+	.web-gallery.gallery.js-flickity.pb-3.animated.slideInLeft#todayNews data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
+		/ - 10.times do |i|
 			.gallery-cell.article
 				div
 					a href="#{headlines[i]['url']}" target="blank"
@@ -26,45 +26,6 @@
 				div
 					a href="#{headlines[i]['url']}" target="blank"
 						button.button= translate 'home.read'
-/ Offers PWA  .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .
-/.downloadPwa
-	.section
-		div
-			center
-				= image_tag("Logo.png", width: "150")
-			h4.text-white.text-center Adote o Feres News como seu app de Notícias
-		
-		link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png"
-		button.button.button-white Add to Home Screen
-	/.horizontal-bar
-		h2.thin.mb-2.animated.fadeInLeftBig
-/ For You .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .
-/ - if current_user
-	.news.mt-3.mb-1
-		.horizontal-bar
-			h2.thin.mb-2.animated.fadeInLeftBig Para Você
-		.mobile-gallery.gallery.js-flickity.pb-3#ForYouNewsMobile data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
-			- current_user.following.count.times do |y|
-				- 10.times do |i|
-					.gallery-cell.article
-						div
-							a href="#{forYou[y][i]['url']}" target="blank"
-								img.thumb src="#{forYou[y][i]['urlToImage']}"
-								p.title= forYou[y][i]['title']
-						div
-							a href="#{forYou[y][i]['url']}" target="blank"
-								button.button= translate 'home.read'
-		.web-gallery.gallery.js-flickity.pb-3.animated.slideInRight#ForYouNewsDesktop data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
-			- current_user.following.count.times do |y|
-				- 10.times do |i|
-					.gallery-cell.article
-						div
-							a href="#{forYou[y][i]['url']}" target="blank"
-								img.thumb src="#{forYou[y][i]['urlToImage']}"
-								p.title= forYou[y][i]['title']
-						div
-							a href="#{forYou[y][i]['url']}" target="blank"
-								button.button= translate 'home.read'
 / Economy .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .
 .news.mt-3.mb-1
 	.horizontal-bar
