--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -17,7 +17,7 @@
 						button.button= translate 'home.read'
 
 	.web-gallery.gallery.js-flickity.pb-3.animated.slideInLeft#todayNews data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
-		/ - 10.times do |i|
+		- 10.times do |i|
 			.gallery-cell.article
 				div
 					a href="#{headlines[i]['url']}" target="blank"
