--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -1,5 +1,5 @@
 / Headlines .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .
-.news.mt-1.mb-1
+/.news.mt-1.mb-1
 	.horizontal-bar
 		h2.thin.animated.fadeInLeftBig Hoje
 		/p.text-primary.thin.animated.fadeInRightBig
@@ -66,7 +66,7 @@
 							a href="#{forYou[y][i]['url']}" target="blank"
 								button.button= translate 'home.read'
 / Economy .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .
-.news.mt-3.mb-1
+/.news.mt-3.mb-1
 	.horizontal-bar
 		h2.thin.mb-2.animated.fadeInLeftBig Economia
 		/h2.add-following
@@ -92,7 +92,7 @@
 					a href="#{economy[i]['url']}" target="blank"
 						button.button= translate 'home.read'
 / Corona .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .
-.news.mt-3.mb-1
+/.news.mt-3.mb-1
 	.horizontal-bar
 		h2.thin.mb-2.animated.fadeInLeftBig Corona Vírus
 		/ h2.add-following
@@ -118,7 +118,7 @@
 					a href="#{corona[i]['url']}" target="blank"
 						button.button= translate 'home.read'
 / Politica .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .
-.news.mt-3.mb-1
+/.news.mt-3.mb-1
 	.horizontal-bar
 		h2.thin.mb-2.animated.fadeInLeftBig Política
 		/h2.add-following
