--- a/app/views/layouts/_desktop-sidebar.html.slim
+++ b/app/views/layouts/_desktop-sidebar.html.slim
@@ -4,7 +4,9 @@
       div
         h5.thin.home-date= homeDate
         h2.thin.home-saudation= saudation
-    .d-flex.justify-content-start.pl-3.pr-3.mt-5
+    .d-flex.justify-content-center
+      input.search type="text" placeholder="Buscar"
+    .d-flex.justify-content-start.pl-3.pr-3.mt-4
       p= link_to root_path
         p.mr-1
           img.sidebar-icon-home src=""
@@ -14,3 +16,15 @@
         p.mr-1
           img.sidebar-icon-categories src=""
         p.ml-1 style="line-height: 30px;" Categorias
+
+css:
+  .search{
+    background: rgba(255,255,255,0.8);
+    border: 1px solid #f2f2f2;
+    border-radius: 10px;
+    padding: 2% 4%;
+    -moz-box-shadow:    0 0 5px 2px rgba(0,0,0,.1);
+    -webkit-box-shadow: 0 0 5px 2px rgba(0,0,0,.1);
+    box-shadow:         0 0 5px 2px rgba(0,0,0,.1);
+    width: 93%;
+  }
